--- a/project.html
+++ b/project.html
@@ -38,7 +38,7 @@
             <a href="" class="check-it">Visit us to know more</a>
         </div> 
     </section>
-    <!-- <---course--> -->
+<!-- course -->
         <section class="course">
             <h1>Courses We Offer</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, reprehenderit.</p>
@@ -47,14 +47,14 @@
                      <h2>Intermediate</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eveniet, deleniti, corporis porro modi voluptatem quia reprehenderit maiores voluptas, libero architecto qui ad facilis?</p>
                 <div class="course-col-1">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/E0SnDj2wmqc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="100%" src="#" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>Lorem ipsum dolor sit amet.</p>
             </div>                </div>
                 <div class="course-col">
                     <h2>Under Graduation</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eveniet, deleniti, corporis porro modi voluptatem quia reprehenderit maiores voluptas, libero architecto qui ad facilis?</p>
                     <div class="course-col-1">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jmAZSjCQ4JM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="100%" src="#" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                     <h2>Post Graduation</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eveniet, deleniti, corporis porro modi voluptatem quia reprehenderit maiores voluptas, libero architecto qui ad facilis?</p>
                     <div class="course-col-1">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WZ8j3Ap0mHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="100%" src="#" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
                 </div>
