--- a/project.html
+++ b/project.html
@@ -124,21 +124,21 @@
                     <img src="images/user1.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sint eum amet et raione a minima sed deserunt! Nulla soluta et blanditiis nesciunt quas?</p>
                     <h4>Christian Berley</h2>
+                      <!-- <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star-o"></i>
+                      <i class="fa fa-star-o"></i> -->
                 </div>
                 <div class="testimonials-cols">
                   <img src="images/user2.jpg" alt="">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sint eum amet et raione a minima sed deserunt! Nulla soluta et blanditiis nesciunt quas?</p>
                   <h4>John Baston</h2>
+                      <!-- <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star-half-o"></i>
+                      <i class="fa fa-star-half-o"></i> -->
               </div>
             </div>
           </section>
@@ -150,11 +150,11 @@
                 Mobile no. 123456789.
             </p>
             <div class="icons">
-                <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i> </a>
+                <!-- <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i> </a>
                 <a href="https://www.whatsapp.com" target="_blank"><i class="fa fa-whatsapp"></i></a>
                 <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.linkdin.com" target="_blank"><i class="fa fa-linkedin"></i></a>
-                <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a> -->
                 </div>
         </section>
         <!-- javascript -->
