--- a/project.html
+++ b/project.html
@@ -35,7 +35,7 @@
             <h1>World Biggest University</h1>
             <p>Making Website is now on of the easiest thing in the world. You just learn html, css, javascript<br> for
                 making good website.</p>
-            <a href="" class="check-it">Visit us to know more</a>
+            <a href="#" class="check-it">Visit us to know more</a>
         </div> 
     </section>
 <!-- course -->
@@ -74,19 +74,19 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, asperiores.</p>
             <div class="row">
                 <div class="campus-col">
-                    <img src="images/london.png" alt="">
+                    <img src="images/london.png" alt="#">
                     <div class="layer">
                         <h1>LONDON</h1>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/newyork.png" alt="">
+                    <img src="images/newyork.png" alt="#">
                     <div class="layer">
                         <h1>NEW YORK</h1>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/washington.png" alt="">
+                    <img src="images/washington.png" alt="#">
                     <div class="layer">
                         <h1>WASHINGTON</h1>
                     </div>
@@ -98,12 +98,12 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum neque vitae dolore corporis optio. Animi!</p>
             <div class="row">
                <div class="facilities-col">
-                   <img src="images/library.png" alt="">
+                   <img src="images/library.png" alt="#">
                    <h3>Our Library</h3>
                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero mollitia nam natus nesciunt non?</p>
                </div>
                <div class="facilities-col">
-                  <img src="images/basketball.png" alt="">
+                  <img src="images/basketball.png" alt="#">
                   <h3>Our basketball Court</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero mollitia nam natus nesciunt non?</p>
               </div>
@@ -124,21 +124,21 @@
                     <img src="images/user1.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sint eum amet et raione a minima sed deserunt! Nulla soluta et blanditiis nesciunt quas?</p>
                     <h4>Christian Berley</h2>
-                      <!-- <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
-                      <i class="fa fa-star-o"></i> -->
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star-o"></i>
                 </div>
                 <div class="testimonials-cols">
                   <img src="images/user2.jpg" alt="">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sint eum amet et raione a minima sed deserunt! Nulla soluta et blanditiis nesciunt quas?</p>
                   <h4>John Baston</h2>
-                      <!-- <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
-                      <i class="fa fa-star-half-o"></i> -->
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star-half-o"></i>
               </div>
             </div>
           </section>
@@ -150,11 +150,11 @@
                 Mobile no. 123456789.
             </p>
             <div class="icons">
-                <!-- <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i> </a>
+                <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i> </a>
                 <a href="https://www.whatsapp.com" target="_blank"><i class="fa fa-whatsapp"></i></a>
                 <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.linkdin.com" target="_blank"><i class="fa fa-linkedin"></i></a>
-                <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a> -->
+                <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
                 </div>
         </section>
         <!-- javascript -->
