--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="project.html"><img src="images/logo.png"></a>
+            <a href="index.html"><img src="images/logo.png"></a>
             <div class="nav-links" id="nav-Links">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
