--- a/project.html
+++ b/project.html
@@ -18,15 +18,15 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="images/logo.png"></a>
+            <a href="project.html"><img src="images/logo.png"></a>
             <div class="nav-links" id="nav-Links">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Course</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Course</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -35,10 +35,10 @@
             <h1>World Biggest University</h1>
             <p>Making Website is now on of the easiest thing in the world. You just learn html, css, javascript<br> for
                 making good website.</p>
-            <a href="#" class="check-it">Visit us to know more</a>
+            <a href="" class="check-it">Visit us to know more</a>
         </div> 
     </section>
-<!-- course -->
+    <!-- <---course--> -->
         <section class="course">
             <h1>Courses We Offer</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, reprehenderit.</p>
@@ -47,14 +47,14 @@
                      <h2>Intermediate</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eveniet, deleniti, corporis porro modi voluptatem quia reprehenderit maiores voluptas, libero architecto qui ad facilis?</p>
                 <div class="course-col-1">
-                <iframe width="100%" height="100%" src="#" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/E0SnDj2wmqc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>Lorem ipsum dolor sit amet.</p>
             </div>                </div>
                 <div class="course-col">
                     <h2>Under Graduation</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eveniet, deleniti, corporis porro modi voluptatem quia reprehenderit maiores voluptas, libero architecto qui ad facilis?</p>
                     <div class="course-col-1">
-                    <iframe width="100%" height="100%" src="#" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jmAZSjCQ4JM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                     <h2>Post Graduation</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eveniet, deleniti, corporis porro modi voluptatem quia reprehenderit maiores voluptas, libero architecto qui ad facilis?</p>
                     <div class="course-col-1">
-                    <iframe width="100%" height="100%" src="#" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WZ8j3Ap0mHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
                 </div>
@@ -74,19 +74,19 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, asperiores.</p>
             <div class="row">
                 <div class="campus-col">
-                    <img src="images/london.png" alt="#">
+                    <img src="images/london.png" alt="">
                     <div class="layer">
                         <h1>LONDON</h1>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/newyork.png" alt="#">
+                    <img src="images/newyork.png" alt="">
                     <div class="layer">
                         <h1>NEW YORK</h1>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/washington.png" alt="#">
+                    <img src="images/washington.png" alt="">
                     <div class="layer">
                         <h1>WASHINGTON</h1>
                     </div>
@@ -98,12 +98,12 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum neque vitae dolore corporis optio. Animi!</p>
             <div class="row">
                <div class="facilities-col">
-                   <img src="images/library.png" alt="#">
+                   <img src="images/library.png" alt="">
                    <h3>Our Library</h3>
                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero mollitia nam natus nesciunt non?</p>
                </div>
                <div class="facilities-col">
-                  <img src="images/basketball.png" alt="#">
+                  <img src="images/basketball.png" alt="">
                   <h3>Our basketball Court</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero mollitia nam natus nesciunt non?</p>
               </div>
